core part of file-on-demand finished
